Alteração index.html

--- a/index.html
+++ b/index.html
@@ -10,41 +10,24 @@
 
   <!-- Favicons -->
   <link href="assets/img/fire-flame.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: DevFolio
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
-
 <body class="index-page">
-
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
-
       <a href="#hero" class="logo d-flex align-items-center">
         <img src="assets/img/tomasabreu.png" alt="Logo">
       </a>
-
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#about" class="active">WHO AM I?</a></li>
@@ -54,25 +37,18 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
     </div>
   </header>
-  
-
   <main class="main">
-
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
       <img src="assets/img/hero-img1.jpg" alt="" data-aos="fade-in">
-
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Tomás Abreu</h2>
         <p><span class="typed" data-typed-items="Web Designer, Developer, Cyber Security, Sports Lover"></span></p>
       </div>
-
     </section><!-- /Hero Section -->
-
     <!-- About Section -->
     <section id="about" class="about section">
 
@@ -81,7 +57,7 @@
         <div class="row gy-4">
           <div class="col-md-6">
             <div class="about-me">
-              <h4>WHO AM I?</h4>
+              <h4>Me</h4>
               <p>
                 My name is Tomás Abreu, and I am a 22-year-old member of the Portuguese Air Force. I have always been passionate about technology, which led me to specialize in cybersecurity. My military career has taught me discipline, focus, and the ability to perform under pressure, skills that complement my technical expertise.
               </p>
@@ -100,10 +76,8 @@
       </div>
 
     </section><!-- /About Section -->
-
     <!-- Resume Section -->
     <section id="resume" class="resume section">
-
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Experience</h2>
@@ -148,37 +122,29 @@
         </div>
 
       </div>
-
     </section><!-- /Resume Section -->
-
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
-
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Articles</h2>
+        <h2>Articles - Coming Soon</h2>
       </div><!-- End Section Title -->
-
       <div class="container">
-
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-Ciber">CIBER</li>
             <li data-filter=".filter-MilitaryLife">Military</li>
             <li data-filter=".filter-LifeStyle">LifeStyle</li>
           </ul><!-- End Portfolio Filters -->
-
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
-
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Ciber">
               <img src="assets/img/portfolio/app-1.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
                 <h4>Segurança na Internet</h4>
                 <p>Importância e cuidados a ter</p>
                 <a href="assets/img/portfolio/app-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="article_cibersecurity.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="#hero" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -188,7 +154,7 @@
                 <h4>Vida Militar</h4>
                 <p>Honrar e defender a nação como um trabalho</p>
                 <a href="assets/img/portfolio/app-2.jpg" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="#hero" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -198,7 +164,7 @@
                 <h4>O que é o sucesso?</h4>
                 <p>Será esta uma pergunta sem resposta? Vejamos</p>
                 <a href="assets/img/portfolio/app-3.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="#hero" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
           </div><!-- End Portfolio Container -->
@@ -219,7 +185,7 @@
             <div class="content px-xl-5">
               <h3><span>Frequently Asked </span><strong>Questions</strong></h3>
               <p>
-                These are some of the questions I get asked the most in my daily life
+                These are some of the questions I get asked the most in my daily life!
               </p>
             </div>
           </div>
@@ -322,10 +288,6 @@
         <a href="https://www.linkedin.com/in/tom%C3%A1s-abreu-946aa6276/" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
       </div>
     </div>
 
