--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
 
             <div class="faq-container">
-              <div class="faq-item faq-active">
+              <div class="faq-item">
                 <h3><span class="num">1.</span> <span>Should I consider military life?</span></h3>
                 <div class="faq-content">
                   <p>In my opinion, all young people should one day consider this possibility. Being in the military goes far beyond what most people know, if you have any questions, you can contact me!</p>
@@ -253,7 +253,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Phone</h3>
-                  <p>Send me a message on Instagram</p>
+                  <p>Send me a message on <a href="https://www.linkedin.com/in/tom%C3%A1s-abreu-946aa6276/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
                 </div>
               </div>
             </div><!-- End Info Item -->
