--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
               <div class="info-item d-flex align-items-center">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
-                  <h3>Address</h3>
-                  <p>Wherever there is internet</p>
+                  <h3>Portugal</h3>
+                  <p>Almada, Setúbal</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -252,8 +252,9 @@
               <div class="info-item d-flex align-items-center">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Phone</h3>
-                  <p>Send me a message on <a href="https://www.linkedin.com/in/tom%C3%A1s-abreu-946aa6276/" target="_blank" rel="noopener noreferrer">LinkedIn</a></p>
+                  <h3>Services</h3>
+                  <p>Do you need a website, script or other service, <a href="https://wa.me/351968339676?text=Hello,%20How%20are%20you?" target="_blank">contact me</a>
+                    and we will discuss!</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
@@ -267,7 +268,6 @@
                 </div>
               </div>
             </div><!-- End Info Item -->
-
           </div>
         </div>
 
