--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </a>
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#about" class="active">WHO AM I?</a></li>
+          <li><a href="#about" class="active">ME</a></li>
           <li><a href="#resume">EXPERIENCE</a></li>
           <li><a href="#portfolio">ARTICLES</a></li>
           <li><a href="#contact">CONTACT</a></li>
@@ -45,8 +45,8 @@
 
       <img src="assets/img/hero-img1.jpg" alt="" data-aos="fade-in">
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
-        <h2>I am Tomás Abreu</h2>
-        <p><span class="typed" data-typed-items="Web Designer, Developer, Cyber Security, Sports Lover"></span></p>
+        <h2>I´m Tomás Abreu</h2>
+        <p><span class="typed" data-typed-items="Web Designer, Developer, Cyber Security, Threat Intelligence"></span></p>
       </div>
     </section><!-- /Hero Section -->
     <!-- About Section -->
