--- a/index.html
+++ b/index.html
@@ -92,33 +92,48 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Academy</h3>
-
-            <div class="resume-item pb-0">
+            <div class="resume-item">
               <h4>Professional Programming Course in Computer Systems</h4>
-              <h5>2019 - 2024</h5>
+              <h5>2019 - 2022</h5>
               <p><em>My secondary education was marked by the way I fell in love with the IT field in general. However, the area of ​​programming was the one that fascinated me the most and from an early age I realized that this would be my vocation.</em></p>
               <ul>
                 <li>600 hours of internship.</li>
-                <li>875 hours of programming classes.</li>
+                <li>875 hours of IT classes.</li>
                 <li>Representative of school students on the general council of the municipal chamber.</li>
               </ul>
             </div><!-- Edn Resume Item -->
+            <div class="resume-item">
+              <h4>Advanced Cyber ​​Defense Programmer Course</h4>
+              <h5>2023 - 2024</h5>
+              <p><em>The Cyber Defence Operations Command (COCiber), in collaboration with the Polytechnic Institute of Beja (IPBeja), delivered this one-year course. During this period, the preparation of new cybersecurity programmers was outstanding, and we had the opportunity to apply our knowledge in practice through a professional internship at COCiber's facilities.</em></p>
+              <ul>
+                <li>6 months of internship.</li>
+                <li>6 months of IT classes.</li>
+              </ul>
+            </div>
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Full Stack Developer</h4>
-              <h5>2022 - </h5>
+              <h4>DevOps - Programming Department</h4>
+              <h5>2023 - ... </h5>
               <p><em>
-                My military career is 2 years old and I couldn't be more satisfied with my choice. Representing and defending the country from the Portuguese Air Force is a source of pride, it's feeling like I'm making my contribution to the nation. Connecting my passion for IT with my interest in serving the country was one of the most important decisions of my life</em></p>
-              <ul>
-                <li>Advanced Cyber ​​Defense Programmer Course.</li>
-                <li>Participation in Cyber ​​Security Exercises.</li>
-                <li>WEB Application Developer and Process Programmer.</li>
-                <li>Vulnerability Analyst</li>
+                A dedicated team focused on automating programming processes in various languages, the Developers Department supports all other sections of COCiber to streamline tasks.</em></p>
+              <ul>   
+                <li>Participation in Locked Shield 2024.</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div><!-- End Resume Item -->
+            <div class="resume-item">
+              <h4>Cyber Threat Intelligence Analyst - Operational</h4>
+              <h5>2023 - ... </h5>
+              <p><em>
+                In the Cyber Intelligence team, we focus on fostering general awareness of various international news that may impact national infrastructures.</em></p>
+              <ul>   
+                <li>Certified in Cisco Cyber ​​Threat Management</li>
+              </ul>
+            </div>
+            
           </div>
 
         </div>
@@ -283,7 +298,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Tomás Abreu</strong> <span>All Rights Reserved</span></p>
+        <p><span>Designed by</span> <strong class="px-1 sitename">Tomás Abreu</strong> <span>All Rights Reserved</span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/bonattotomas/?next=%2F" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
