Alterações nas horas de aulas

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
               <h5>2023 - 2024</h5>
               <p><em>The Cyber Defence Operations Command (COCiber), in collaboration with the Polytechnic Institute of Beja (IPBeja), delivered this one-year course. During this period, the preparation of new cybersecurity programmers was outstanding, and we had the opportunity to apply our knowledge in practice through a professional internship at COCiber's facilities.</em></p>
               <ul>
-                <li>6 months of internship.</li>
-                <li>6 months of IT classes.</li>
+                <li>1000 hours of internship.</li>
+                <li>1020 hours of IT - Cybersecurity classes (OS, Netw, Dev, DB, etc)</li>
               </ul>
             </div>
           </div>
@@ -130,7 +130,7 @@
               <p><em>
                 In the Cyber Intelligence team, we focus on fostering general awareness of various international news that may impact national infrastructures.</em></p>
               <ul>   
-                <li>Certified in Cisco Cyber ​​Threat Management</li>
+                <li>Certified in CISCO Cyber ​​Threat Management</li>
               </ul>
             </div>
             
