Adição do botão de Download de CV

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <img src="assets/img/hero-img1.jpg" alt="" data-aos="fade-in">
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I´m Tomás Abreu</h2>
-        <p><span class="typed" data-typed-items="Web Designer, Developer, Cyber Security, Threat Intelligence"></span></p>
+        <p><span class="typed" data-typed-items="Web Developer, DevOps, Cyber Security, Threat Intelligence"></span></p>
       </div>
     </section><!-- /Hero Section -->
     <!-- About Section -->
@@ -138,6 +138,9 @@
 
         </div>
 
+      </div>
+      <div class="container text-center" data-aos="fade-up" data-aos-delay="300">
+        <button id="viewPdfButton" class="btn btn-primary">MY CV</button>
       </div>
     </section><!-- /Resume Section -->
     <!-- Portfolio Section -->
