--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <img src="assets/img/hero-img1.jpg" alt="" data-aos="fade-in">
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I´m Tomás Abreu</h2>
-        <p><span class="typed" data-typed-items="Web Developer, DevOps, Cyber Security, Threat Intelligence"></span></p>
+        <p><span class="typed" data-typed-items="Web Developer, DevOps, Cyber Security, Cyber Threat Intelligence"></span></p>
       </div>
     </section><!-- /Hero Section -->
     <!-- About Section -->
@@ -317,7 +317,9 @@
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
-  <div id="preloader"></div>
+  <div id="preloader">
+    <video id="preloader-video" src="assets/img/load.mp4" autoplay loop muted></video>
+  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
