Atualização de detalhes video

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       </div>
       <div class="container text-center" data-aos="fade-up" data-aos-delay="300">
-        <button id="viewPdfButton" class="btn btn-primary">MY CV</button>
+        <button id="viewPdfButton" class="btn btn-primary">MY FULL CV</button>
       </div>
     </section><!-- /Resume Section -->
     <!-- Portfolio Section -->
