Atualização de detalhes video

--- a/index.html
+++ b/index.html
@@ -318,7 +318,11 @@
 
   <!-- Preloader -->
   <div id="preloader">
-    <video id="preloader-video" src="assets/img/load.mp4" autoplay loop muted></video>
+    <video id="preloader-video" autoplay loop muted>
+        <source src="assets/img/load.mp4" type="video/mp4" media="(max-width: 768px)">
+        <source src="assets/img/load.mp4" type="video/mp4">
+        <canvas id="preloader-canvas"></canvas>
+    </video>
   </div>
 
   <!-- Vendor JS Files -->
