AD Video detalhes

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
   <!-- Preloader -->
   <div id="preloader">
-    <video id="preloader-video" autoplay loop muted>
+    <video id="preloader-video" autoplay loop muted preload="auto">
         <source src="assets/img/load.mp4" type="video/mp4" media="(max-width: 768px)">
         <source src="assets/img/load.mp4" type="video/mp4">
         <canvas id="preloader-canvas"></canvas>
