--- a/index.html
+++ b/index.html
@@ -147,43 +147,37 @@
     <section id="portfolio" class="portfolio section">
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Articles - Coming Soon</h2>
+        <h2>Some of my Services</h2>
       </div><!-- End Section Title -->
       <div class="container">
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-Ciber">CIBER</li>
-            <li data-filter=".filter-MilitaryLife">Military</li>
-            <li data-filter=".filter-LifeStyle">LifeStyle</li>
-          </ul><!-- End Portfolio Filters -->
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Ciber">
-              <img src="assets/img/portfolio/app-1.jpg" class="img-fluid rounded" alt="">
+              <img src="assets/img/gif1.gif" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>Segurança na Internet</h4>
-                <p>Importância e cuidados a ter</p>
-                <a href="assets/img/portfolio/app-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <h4>Web Developer</h4>
+                <p>Do you want a personal Website?</p>
+                <a href="assets/img/gif1.gif" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="#hero" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-MilitaryLife">
-              <img src="assets/img/portfolio/app-2.jpg" class="img-fluid rounded" alt="">
+              <img src="assets/img/gif2.gif" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>Vida Militar</h4>
-                <p>Honrar e defender a nação como um trabalho</p>
-                <a href="assets/img/portfolio/app-2.jpg" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <h4>CV Design Maker</h4>
+                <p>I do the complete design of your CV</p>
+                <a href="assets/img/gif2.gif" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="#hero" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-LifeStyle">
-              <img src="assets/img/portfolio/app-3.jpg" class="img-fluid rounded" alt="">
+              <img src="assets/img/gif3.gif" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>O que é o sucesso?</h4>
-                <p>Será esta uma pergunta sem resposta? Vejamos</p>
-                <a href="assets/img/portfolio/app-3.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <h4>Any doubts?</h4>
+                <p>Contact me</p>
+                <a href="assets/img/gif3.gif" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="#hero" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
