Adição do botão de contacto nos gif´s dos serviço em target=blank

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <ul>
           <li><a href="#about" class="active">ME</a></li>
           <li><a href="#resume">EXPERIENCE</a></li>
-          <li><a href="#portfolio">ARTICLES</a></li>
+          <li><a href="#portfolio">SERVICES</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -158,7 +158,7 @@
                 <h4>Web Developer</h4>
                 <p>Do you want a personal Website?</p>
                 <a href="assets/img/gif1.gif" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="#hero" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://wa.me/351968339676?text=Hello,%20How%20are%20you?" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -168,7 +168,7 @@
                 <h4>CV Design Maker</h4>
                 <p>I do the complete design of your CV</p>
                 <a href="assets/img/gif2.gif" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="#hero" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://wa.me/351968339676?text=Hello,%20How%20are%20you?" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -178,7 +178,7 @@
                 <h4>Any doubts?</h4>
                 <p>Contact me</p>
                 <a href="assets/img/gif3.gif" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="#hero" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="https://wa.me/351968339676?text=Hello,%20How%20are%20you?" target="_blank" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
           </div><!-- End Portfolio Container -->
@@ -257,7 +257,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Portugal</h3>
-                  <p>Almada, Setúbal</p>
+                  <p>Lisboa</p>
                 </div>
               </div>
             </div><!-- End Info Item -->
