Adição do cursor para o rato

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 </head>
 <body class="index-page">
+  <div class="cursor" id="cursor"></div>
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
       <a href="#hero" class="logo d-flex align-items-center">
