Adição do artigo 2 'Inteligência Artificial no Mundo das Tecnologias'

--- a/public/index.html
+++ b/public/index.html
@@ -106,16 +106,16 @@
                 <div class="artigo-image" style="background-image: url('../static/images/artigo1.jpg');"></div>
                 <div class="artigo-text-content">
                     <h3>Escolher a Via Militar</h3>
-                    <p>A vida militar como caminho de desenvolvimento pessoal e profissional</p>
+                    <p>A vida militar como caminho de desenvolvimento pessoal e profissional.</p>
                     <a href="https://www.linkedin.com/pulse/vida-militar-como-caminho-de-desenvolvimento-pessoal-e-tom%C3%A1s-abreu-egcjf/?trackingId=CDQoHioeSYibPMPg0zoR8g%3D%3D" class="btn-ver-completo" target="_blank">Ver Completo</a>
                 </div>
             </div>
             <div class="artigo-box">
                 <div class="artigo-image" style="background-image: url('../static/images/artigo2.jpg');"></div>
                 <div class="artigo-text-content">
-                    <h3>O Futuro do Desenvolvimento Web</h3>
-                    <p>Será o Vibe Coding o futuro dos programadores Frontend?</p>
-                    <a href="#artigos-titulo" class="btn-ver-completo" target="">Em Desenvolvimento</a>
+                    <h3>Inteligência Artificial no Mundo das Tecnologias</h3>
+                    <p>Como a Inteligência Artificial está a transformar a tecnologia, o trabalho e a forma como lidamos com os dados.</p>
+                    <a href="https://www.linkedin.com/pulse/intelig%C3%AAncia-artificial-mundo-das-tecnologias-tom%C3%A1s-abreu-ffsgf/?trackingId=5ju2pdk9T4Ky%2F5CA0%2FvSNg%3D%3D" class="btn-ver-completo" target="">Ver Completo</a>
                 </div>
             </div>
             <div class="artigo-box">
