Alteração de estado profissional

--- a/public/index.html
+++ b/public/index.html
@@ -78,13 +78,13 @@
             <div class="experiencia-column">
                 <h3>Profissional</h3>
                 <div class="experiencia-item">
-                    <h4>Departamento de Programação em Ciberdefesa</h4>
+                    <h4>Departamento de Programação em Ciberdefesa - COCIBER</h4>
                     <p class="datas">2024 - ...</p>
                     <p>Uma equipa dedicada e focada na automatização de processos de programação em diversas linguagens apoiando todas as restantes secções do Comando de Operações de Ciberdefesa (COCiber), contribuindo para a otimização e agilização das suas tarefas.</p>
                 </div>
                 <div class="experiencia-item">
-                    <h4>Departamento de Cyber Threat Intelligence - Estratégico</h4>
-                    <p class="datas">2025 - ...</p>
+                    <h4>Departamento de Cyber Threat Intelligence Estratégico - COCIBER</h4>
+                    <p class="datas">2025 - 2026</p>
                     <p>A equipa de Ciber Threat Intelligence, foca-se em promover a consciencialização geral sobre diversos eventos que ocorram no Ciberespaço e que possam ter impacto nas infraestruturas ciber do Estado Maior General das Forças Armadas</p>
                 </div>
             </div>
