Correção de erros de ligação entre páginas index.html e eventos.html e atualização do curriculum vitae

--- a/public/eventos.html
+++ b/public/eventos.html
@@ -15,12 +15,12 @@
     <header>
         <nav class="navbar">
             <ul>
-                <li><a href="/public/index.html#inicio">Início</a></li>
-                <li><a href="/public/index.html#sobre">Sobre</a></li>
-                <li><a href="/public/index.html#experiencia-titulo">Experiência</a></li>
-                <li><a href="/public/index.html#artigos-titulo">Artigos</a></li>
-                <li><a href="/public/eventos.html">Eventos</a></li>
-                <li><a href="/public/index.html#contactos-titulo">Contactos</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="index.html#sobre">Sobre</a></li>
+                <li><a href="index.html#experiencia-titulo">Experiência</a></li>
+                <li><a href="index.html#artigos-titulo">Artigos</a></li>
+                <li><a href="eventos.html">Eventos</a></li>
+                <li><a href="index.html#contactos-titulo">Contactos</a></li>
             </ul>
         </nav>
     </header>
@@ -36,8 +36,6 @@
     <section id="galeria-eventos" class="galeria-eventos-section">
         <canvas class="background-particles"></canvas>
         <div class="eventos-container">
-            <h2>Galeria de Eventos</h2>
-            
             <div class="eventos-grid">
                 <!-- Evento 1 -->
                 <div class="evento-card">
@@ -48,7 +46,7 @@
                         </div>
                     </div>
                     <div class="evento-info">
-                        <h3>V2CN - MADRID</h3>
+                        <h3>V2CN</h3>
                         <p class="evento-data"><i class="far fa-calendar-alt"></i>8 a 11 de Fevereiro, 2026</p>
                         <p class="evento-descricao">Foi com grande orgulho que tive a oportunidade de representar portugal desta vez no exercicio V2CN, em Madrid, Espanha. </p>
                     </div>
@@ -85,33 +83,6 @@
                 </div>
         </div>
     </section>
-
-    <section id="contactos-titulo" class="contactos-titulo-section">
-        <video autoplay muted loop playsinline>
-            <source src="../static/videos/contactos.mp4" type="video/mp4">
-            O seu navegador não suporta vídeos HTML5.
-        </video>
-        <div class="video-overlay"></div>
-    </section>
-
-    <section id="contactos" class="contactos-section">
-        <canvas class="background-particles"></canvas>
-        <div class="contactos-content">
-            <p>Podes contactar-me através dos seguintes meios:</p>
-            <div class="contact-links">
-                <a href="https://www.linkedin.com/in/tomasabreuwork" target="_blank" class="contact-icon linkedin">
-                    <i class="fab fa-linkedin-in"></i>
-                    <span>LinkedIn</span>
-                </a>
-                <a href="https://www.instagram.com/bonattotomas/" target="_blank" class="contact-icon instagram">
-                    <i class="fab fa-instagram"></i>
-                    <span>Instagram</span>
-                </a>
-            </div>
-            <a href="../static/pdf/Curriculum.pdf" target="_blank" class="btn-cv">Curriculum Vitae</a>
-        </div>
-    </section>
-
     <script src="../static/script.js"></script>
     <script src="../static/eventos.js"></script>
 </body>
