--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#experiencia-titulo">Experiência</a></li>
                 <li><a href="#artigos-titulo">Artigos</a></li>
-                <li><a href="/public/eventos.html">Eventos</a></li>
+                <li><a href="eventos.html">Eventos</a></li>
                 <li><a href="#contactos-titulo">Contactos</a></li>
             </ul>
         </nav>
