Mudança de imagem no sobre; Update para resoluções maiores; Adição de navbar para versão mobile

--- a/public/eventos.html
+++ b/public/eventos.html
@@ -12,6 +12,22 @@
     <div id="loading-screen">
         <div class="loader"></div>
     </div>
+
+    <!-- Hamburger Menu Mobile -->
+    <button class="hamburger" id="hamburger" aria-label="Menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <nav class="mobile-menu-overlay" id="mobile-menu">
+        <a href="index.html">Início</a>
+        <a href="index.html#sobre">Sobre</a>
+        <a href="index.html#experiencia-titulo">Experiência</a>
+        <a href="index.html#artigos-titulo">Artigos</a>
+        <a href="eventos.html">Eventos</a>
+        <a href="index.html#contactos-titulo">Contactos</a>
+    </nav>
+
     <header>
         <nav class="navbar">
             <ul>
@@ -41,9 +57,6 @@
                 <div class="evento-card">
                     <div class="evento-image">
                         <img src="../static/images/v2cn2026.jpg" alt="V2CN 2026">
-                        <div class="evento-overlay">
-                            <i class="fas fa-search-plus"></i>
-                        </div>
                     </div>
                     <div class="evento-info">
                         <h3>V2CN</h3>
@@ -56,9 +69,6 @@
                 <div class="evento-card">
                     <div class="evento-image">
                         <img src="../static/images/cc2025.png" alt="Workshop de Python para DevSecOps">
-                        <div class="evento-overlay">
-                            <i class="fas fa-search-plus"></i>
-                        </div>
                     </div>
                     <div class="evento-info">
                         <h3>NATO Cyber Coalition 2025</h3>
@@ -71,9 +81,6 @@
                 <div class="evento-card">
                     <div class="evento-image">
                         <img src="../static/images/ls2024.png" alt="NATO Locked Shields 2024">
-                        <div class="evento-overlay">
-                            <i class="fas fa-search-plus"></i>
-                        </div>
                     </div>
                     <div class="evento-info">
                         <h3>NATO Locked Shields 2024</h3>
