--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,22 @@
     <div id="loading-screen">
         <div class="loader"></div>
     </div>
+
+    <!-- Hamburger Menu Mobile -->
+    <button class="hamburger" id="hamburger" aria-label="Menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <nav class="mobile-menu-overlay" id="mobile-menu">
+        <a href="#inicio">Início</a>
+        <a href="#sobre">Sobre</a>
+        <a href="#experiencia-titulo">Experiência</a>
+        <a href="#artigos-titulo">Artigos</a>
+        <a href="eventos.html">Eventos</a>
+        <a href="#contactos-titulo">Contactos</a>
+    </nav>
+
     <header>
         <nav class="navbar">
             <ul>
@@ -36,7 +52,7 @@
         <canvas class="background-particles"></canvas>
         <div class="about-content">
             <div class="profile-photo">
-                <img src="../static/images/eu.png" alt="A minha fotografia de perfil">
+                <img src="../static/images/eu_2.jpeg" alt="A minha fotografia de perfil">
             </div>
             <div class="about-text">
                 <h2>Sobre</h2>
