Atualização das sections de titulo; Atualização das boxes dos artigos

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,10 @@
             <source src="../static/videos/background.mp4" type="video/mp4">
             O seu navegador não suporta vídeos HTML5.
         </video>
+        <div class="hero-text">
+            <h1 class="hero-title">Tomás Abreu</h1>
+            <p class="hero-subtitle">Cybersecurity</p>
+        </div>
     </section>
 
     <section id="sobre" class="about-me-section">
@@ -80,10 +84,13 @@
 
     <section id="experiencia-titulo" class="experiencia-titulo-section">
         <video autoplay muted loop playsinline>
-            <source src="../static/videos/experiencia.mp4" type="video/mp4">
+            <source src="../static/videos/background.mp4" type="video/mp4">
             O seu navegador não suporta vídeos HTML5.
         </video>
         <div class="video-overlay"></div>
+        <div class="section-hero-text">
+            <h2 class="section-hero-title">Experiência</h2>
+        </div>
     </section>
 
     <section id="experiencia" class="experiencia-section">
@@ -126,48 +133,48 @@
 
     <section id="artigos-titulo" class="artigos-titulo-section">
         <video autoplay muted loop playsinline>
-            <source src="../static/videos/artigos.mp4" type="video/mp4">
+            <source src="../static/videos/background.mp4" type="video/mp4">
             O seu navegador não suporta vídeos HTML5.
         </video>
         <div class="video-overlay"></div>
+        <div class="section-hero-text">
+            <h2 class="section-hero-title">Artigos</h2>
+        </div>
     </section>
     
     <section id="artigos" class="artigos-section">
         <canvas class="background-particles"></canvas>
         <div class="artigos-grid">
-            <div class="artigo-box">
+            <a class="artigo-box" href="https://www.linkedin.com/pulse/vida-militar-como-caminho-de-desenvolvimento-pessoal-e-tom%C3%A1s-abreu-egcjf/?trackingId=CDQoHioeSYibPMPg0zoR8g%3D%3D" target="_blank">
                 <div class="artigo-image" style="background-image: url('../static/images/artigo1.jpg');"></div>
                 <div class="artigo-text-content">
                     <h3>Escolher a Via Militar</h3>
-                    <p>A vida militar como caminho de desenvolvimento pessoal e profissional.</p>
-                    <a href="https://www.linkedin.com/pulse/vida-militar-como-caminho-de-desenvolvimento-pessoal-e-tom%C3%A1s-abreu-egcjf/?trackingId=CDQoHioeSYibPMPg0zoR8g%3D%3D" class="btn-ver-completo" target="_blank">Ver Completo</a>
                 </div>
-            </div>
-            <div class="artigo-box">
+            </a>
+            <a class="artigo-box" href="https://www.linkedin.com/pulse/intelig%C3%AAncia-artificial-mundo-das-tecnologias-tom%C3%A1s-abreu-ffsgf/?trackingId=5ju2pdk9T4Ky%2F5CA0%2FvSNg%3D%3D" target="_blank">
                 <div class="artigo-image" style="background-image: url('../static/images/artigo2.jpg');"></div>
                 <div class="artigo-text-content">
-                    <h3>Inteligência Artificial no Mundo das Tecnologias</h3>
-                    <p>Como a Inteligência Artificial está a transformar a tecnologia, o trabalho e a forma como lidamos com os dados.</p>
-                    <a href="https://www.linkedin.com/pulse/intelig%C3%AAncia-artificial-mundo-das-tecnologias-tom%C3%A1s-abreu-ffsgf/?trackingId=5ju2pdk9T4Ky%2F5CA0%2FvSNg%3D%3D" class="btn-ver-completo" target="">Ver Completo</a>
+                    <h3>Inteligência Artificial em IT</h3>
                 </div>
-            </div>
-            <div class="artigo-box">
+            </a>
+            <a class="artigo-box" href="#artigos-titulo">
                 <div class="artigo-image" style="background-image: url('../static/images/artigo3.jpg');"></div>
                 <div class="artigo-text-content">
                     <h3>Liderança</h3>
-                    <p>Como funciona a vida de um lider e que aptidões técnicas deve adquirir.</p>
-                    <a href="#artigos-titulo" class="btn-ver-completo" target="">Em Desenvolvimento</a>
                 </div>
-            </div>
+            </a>
         </div>
     </section>
 
     <section id="contactos-titulo" class="contactos-titulo-section">
         <video autoplay muted loop playsinline>
-            <source src="../static/videos/contactos.mp4" type="video/mp4">
+            <source src="../static/videos/background.mp4" type="video/mp4">
             O seu navegador não suporta vídeos HTML5.
         </video>
         <div class="video-overlay"></div>
+        <div class="section-hero-text">
+            <h2 class="section-hero-title">Contactos</h2>
+        </div>
     </section>
 
     <section id="contactos" class="contactos-section">
